Changelog
=========

v1.0.5(unreleased)
-------------------

- Add tasks calls
  [maartenkling]

- Post valid json so posting works
  [maartenkling]


v1.0.4, Feb 11, 2015
-------------------

- DELETE method json fix


v1.0.3, Feb 11, 2015
-------------------

- pypi fixes


v1.0.2, Feb 11, 2015
-------------------

- bug fixes


v1.0.1, Nov 10, 2012
-------------------

- Initial release.